force-app/main/default/objects/Compliance_Audit_Gap__e/Compliance_Audit_Gap__e.object-meta.xml
<CustomObject>
    <label>Compliance Audit Gap</label>
    <pluralLabel>Compliance Audit Gaps</pluralLabel>
</CustomObject>