force-app/main/default/objects/Compliance_Audit_Gap__e/fields/Framework__c.field-meta.xml
<CustomField>
    <fullName>Framework__c</fullName>
    <label>Framework</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>