force-app/main/default/objects/Compliance_Audit_Gap__e/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <label>Object Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>