force-app/main/default/objects/Compliance_Audit_Gap__e/fields/Regulation_Reference__c.field-meta.xml
<CustomField>
    <fullName>Regulation_Reference__c</fullName>
    <label>Regulation Reference</label>
    <length>80</length>
    <type>Text</type>
</CustomField>