force-app/main/default/objects/Compliance_Audit_Gap__e/fields/Source_Class__c.field-meta.xml
<CustomField>
    <fullName>Source_Class__c</fullName>
    <label>Source Class</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>