force-app/main/default/objects/Compliance_Audit_Gap__e/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <label>Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>